RESOLVED FIXED285637
Invalidate CGIOSurfaceContext when the IOSurface is mutated
https://bugs.webkit.org/show_bug.cgi?id=285637
Summary Invalidate CGIOSurfaceContext when the IOSurface is mutated
Matt Woodrow
Reported 2025-01-08 16:27:57 PST
Attachments
Matt Woodrow
Comment 1 2025-01-08 16:29:29 PST
EWS
Comment 2 2025-01-09 12:49:59 PST
Committed 288670@main (f5eb03df43dd): <https://commits.webkit.org/288670@main> Reviewed commits have been landed. Closing PR #38755 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.