Invalidate CGIOSurfaceContext when the IOSurface is mutated. https://bugs.webkit.org/show_bug.cgi?id=285637 <rdar://142515275>

Reviewed by Simon Fraser.

* Source/WebCore/PAL/pal/cg/CoreGraphicsSoftLink.cpp:
* Source/WebCore/PAL/pal/cg/CoreGraphicsSoftLink.h:
* Source/WebCore/PAL/pal/spi/cg/CoreGraphicsSPI.h:
* Source/WebCore/platform/graphics/cg/ImageBufferIOSurfaceBackend.cpp:
(WebCore::ImageBufferIOSurfaceBackend::invalidateCachedNativeImage):
(WebCore::ImageBufferIOSurfaceBackend::prepareForExternalWrite):
* Source/WebCore/platform/graphics/cg/ImageBufferIOSurfaceBackend.h:

Canonical link: https://commits.webkit.org/288670@main